Added annotation Struct